tests/baselines/reference/typingsSuggestion1.errors.txt
a.ts(1,1): error TS2591: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.


==== tsconfig.json (0 errors) ====
    { "compilerOptions": {"types": []} }
    
==== a.ts (1 errors) ====
    module.exports = 1;
    ~~~~~~
!!! error TS2591: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
    